trying out some grid changes to fix grid on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -261,7 +261,6 @@ footer p {
   margin-right: 5%;
   margin-left: 5%;
   margin-bottom: 2%;
-
 }
 
 .illustration-container .illustration-gallery {
@@ -275,12 +274,15 @@ footer p {
   -webkit-column-count: 5;
   -webkit-column-gap: 0px;
   -webkit-row-gap: 5px;
+  -webkit-column-break-inside: avoid;
+  -moz-column-break-inside: avoid;
   -moz-column-count: 5;
   -moz-column-gap: 0px;
   -moz-row-gap: 5px;
   column-count: 5;
   column-gap: 5px;
   row-gap: 5px;
+  column-break-inside: avoid;
 }
 
 .illustration-gallery img {
@@ -441,22 +443,19 @@ footer p {
     margin: 0px 0px 20px 0px;
     padding: 0px;
   }
-  /* .illustration-gallery {
+  .illustration-gallery {
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
     padding: 5px;
-    
-  } */
-
-  .illustration-gallery {
-    margin-bottom: 0 !important;
-    column-count: 2;
-    display: block;
+    -webkit-column-break-inside: avoid;
+    -moz-column-break-inside: avoid;
+    column-break-inside: avoid;
   }
+
   .illustration-container .illustration-gallery {
-  margin-bottom: 0px;
-}
+    margin-bottom: 0px;
+  }
   #business-inquiries {
     margin: auto;
     margin-bottom: 10%;
